# api/src/main/kotlin/com/example/api/controller/gen/src/main/kotlin/com/example/api/controller/gen/User.kt
@@ -1,0 +1,31 @@
+package com.example.api.controller.gen
+
+import java.util.Objects
+import com.fasterxml.jackson.annotation.JsonProperty
+import javax.validation.constraints.DecimalMax
+import javax.validation.constraints.DecimalMin
+import javax.validation.constraints.Email
+import javax.validation.constraints.Max
+import javax.validation.constraints.Min
+import javax.validation.constraints.NotNull
+import javax.validation.constraints.Pattern
+import javax.validation.constraints.Size
+import javax.validation.Valid
+import io.swagger.v3.oas.annotations.media.Schema
+
+/**
+ * 
+ * @param userId 
+ * @param userName 
+ */
+data class User(
+
+    @Schema(example = "null", required = true, description = "")
+    @get:JsonProperty("userId", required = true) val userId: java.util.UUID,
+
+    @Schema(example = "null", required = true, description = "")
+    @get:JsonProperty("userName", required = true) val userName: kotlin.String
+) {
+
+}
+
